--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
     <artifactId>spring-boot-starter-validation</artifactId>
 </dependency>
 
+<!-- Spring Boot Starter Security -->
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
